--- a/eOdznaki-SPA/src/app/components/leaderboard/leaderboard.component.html
+++ b/eOdznaki-SPA/src/app/components/leaderboard/leaderboard.component.html
@@ -1,21 +1,51 @@
 <div class="container">
-  <div class="row d-flex justify-content-center">
-    <div class="table-responsive mt-5 col-6">
-      <table class="table text-center ">
-        <thead class="text-white" style="background-image: url(../../../assets/background-gradient.jpg);">
-        <tr>
-          <th *ngFor="let header of headers" scope="col"><h5><b>{{header}}</b></h5></th>
-        </tr>
-        </thead>
-        <tbody class="bg-white">
-        <tr mdbTableCol *ngFor="let user of users; let i = index">
-          <th scope="row">{{ i + 1 }}</th>
-          <td><img src="{{ user.avatar }}" /> {{ user.username }}</td>
-          <td>{{ user.points }}</td>
-        </tr>
-        </tbody>
-      </table>
+  <div class="row h-100 mt-4">
+    <div class="col align-self-center">
+      <mdb-card class="mt-4 mb-4">
+
+        <mdb-card-header class="info-color white-text text-center pt-4 pb-3"
+                         style="background-image: url(../../../assets/background-gradient.jpg);">
+          <h5>
+            <strong>Leaderboard</strong>
+          </h5>
+        </mdb-card-header>
+
+        <mdb-card-body class="px-0 pt-0">
+
+
+          <!--<table class="table text-center ">-->
+            <!--<thead>-->
+            <!--<tr>-->
+              <!--<th *ngFor="let header of headers" class="px-3 py-3" scope="col"><h5><b>{{header}}</b></h5></th>-->
+            <!--</tr>-->
+            <!--</thead>-->
+            <!--<tbody class="bg-white">-->
+            <!--<tr mdbTableCol *ngFor="let user of users; let i = index">-->
+              <!--<th scope="row">{{ i + 1 }}</th>-->
+              <!--<td><img src="{{ user.avatar }}" /> {{ user.username }}</td>-->
+              <!--<td>{{ user.points }}</td>-->
+            <!--</tr>-->
+            <!--</tbody>-->
+          <!--</table>-->
+
+          <table class="table table-hover" style="cursor: pointer" on-mouseleave="hoveredIndex=null">
+            <tr on-mouseover=" hoveredIndex=null">
+              <th class="pl-3 pr-3 py-3" style="width: 20%">#</th>
+              <th class="pl-3 pr-3 py-3" style="width: 60%">Username</th>
+              <th class="pl-3 pr-3 py-3" style="width: 20%">Points</th>
+            </tr>
+            <tr *ngFor="let user of users; let index=index;" on-mouseover="hoveredIndex=index">
+              <td class="pl-3 pr-3 py-3 align-middle">{{ index + 1 }}</td>
+              <td class="pl-3 pr-3 py-3 align-middle"><img src="{{ user.avatar }}" width="40px" height="40px" class="mr-2 rounded-circle"/> {{ user.username }}</td>
+              <td class="pl-3 pr-3 py-3 align-middle">{{user.points}}</td>
+            </tr>
+          </table>
+
+        </mdb-card-body>
+
+      </mdb-card>
     </div>
+
   </div>
 </div>
 
