--- a/eOdznaki-SPA/src/app/components/pagination/pagination.component.html
+++ b/eOdznaki-SPA/src/app/components/pagination/pagination.component.html
@@ -1,18 +1,18 @@
 <ul *ngIf="totalItems > 0" class="pagination pg-blue p-0 mb-4">
 
-  <li class="page-item first">
-    <button aria-label="First"
-            (click)="onPage(1)" [disabled]="firstPage() || loading"
-            [className]="getLinkClass(firstPage())">
-      <span aria-hidden="true">&laquo;</span>
-    </button>
-  </li>
+  <!--<li class="page-item first">-->
+    <!--<button aria-label="First"-->
+            <!--(click)="onPage(1)" [disabled]="firstPage() || loading"-->
+            <!--[className]="getLinkClass(firstPage())">-->
+      <!--<span aria-hidden="true">First</span>-->
+    <!--</button>-->
+  <!--</li>-->
 
-  <li class="page-item">
+  <li class="page-item first">
     <button aria-label="Previous"
             (click)="onPrev()" [disabled]="firstPage() || loading"
             [className]="getLinkClass(firstPage())">
-      <span aria-hidden="true">&lt;</span>
+      <span aria-hidden="true">&laquo;</span>
       <span class="sr-only">Previous</span>
     </button>
   </li>
@@ -25,21 +25,21 @@
     </button>
   </li>
 
-  <li class="page-item">
+  <li class="page-item last">
     <button aria-label="Next"
             (click)="onNext(true)" [disabled]="lastPage() || loading"
             [className]="getLinkClass(lastPage())">
-      <span aria-hidden="true">&gt;</span>
+      <span aria-hidden="true">&raquo;</span>
       <span class="sr-only">Next</span>
     </button>
   </li>
 
-  <li class="page-item last">
-    <button aria-label="Last"
-            (click)="onPage(totalPages)" [disabled]="lastPage() || loading"
-            [className]="getLinkClass(lastPage())">
-      <span aria-hidden="true">&raquo;</span>
-      <span class="sr-only">Previous</span>
-    </button>
-  </li>
+  <!--<li class="page-item last">-->
+    <!--<button aria-label="Last"-->
+            <!--(click)="onPage(totalPages)" [disabled]="lastPage() || loading"-->
+            <!--[className]="getLinkClass(lastPage())">-->
+      <!--<span aria-hidden="true">Last</span>-->
+      <!--<span class="sr-only">Previous</span>-->
+    <!--</button>-->
+  <!--</li>-->
 </ul>
